--- a/apps/web/src/components/Testimonials.astro
+++ b/apps/web/src/components/Testimonials.astro
@@ -1,6 +1,6 @@
 ---
 // Testimonials component
-import { getTestimonials } from '../data/testimonials';
+import { getTestimonials } from '@/data/testimonials';
 const testimonials = getTestimonials();
 
 // Generate stars based on rating
