--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 export const prerender = true;
 
-import FeaturedListings from '../components/FeaturedListings.astro';
-import Hero from '../components/Hero.astro';
-import PopularDestinations from '../components/PopularDestinations.astro';
-import Testimonials from '../components/Testimonials.astro';
-import Layout from '../layouts/Layout.astro';
+import FeaturedListings from '@/components/FeaturedListings.astro';
+import Hero from '@/components/Hero.astro';
+import PopularDestinations from '@/components/PopularDestinations.astro';
+import Testimonials from '@/components/Testimonials.astro';
+import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout title='Alojamientos en la costa del río Uruguay'>
