--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import { getLangFromUrl, useTranslations } from '../utils/i18n';
-import LanguageSelector from './LanguageSelector.astro';
-import ThemeToggle from './ThemeToggle.astro';
+import { getLangFromUrl, useTranslations } from '@/utils/i18n';
+import LanguageSelector from '@/components/LanguageSelector.astro';
+import ThemeToggle from '@/components/ThemeToggle.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
