--- a/apps/web/src/components/LanguageSelector.astro
+++ b/apps/web/src/components/LanguageSelector.astro
@@ -1,5 +1,5 @@
 ---
-import { getLangFromUrl } from '../utils/i18n';
+import { getLangFromUrl } from '@/utils/i18n';
 
 const { url } = Astro;
 const currentLang = getLangFromUrl(url);
